[Test cases failing] Integrate multiResolver in Node